--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -16,11 +16,12 @@
 }
 
 .header-title h1 {
-    /* font-family: "Tilt Neon", sans-serif; */
+    font-size: 30px;
+
 }
 
 .header-title img {
-    height: 90%;
+    height: 70%;
 }
 
 .searchbar-container {
@@ -52,19 +53,10 @@
     flex-direction: row;
     align-items: center;
     margin-left: 5%;
-    width: 20%;
+    width: 25%;
 }
 
 .link-button {
-    background-color: white;
-    height: 40px;
-    width: 40px;
-    border-radius: 40px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
     margin: auto 1%;
 }
 
@@ -75,11 +67,14 @@
 .user-container {
     margin-left: 10%;
     display: flex;
+    align-items: center;
     flex-direction: row;
-    width: 50%;
+    width: 100%;
     cursor: pointer;
 }
 
 .username {
+    margin: 0;
     margin-right: 5%;
+    font-size: 20px;
 }
