--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -16,11 +16,11 @@
         </div>
         <mat-form-field appearance="outline" class="input-container">
             <mat-label>Email</mat-label>
-            <input matInput placeholder="Seu email..." style="height: 50px;">
+            <input matInput placeholder="Seu email...">
         </mat-form-field>
         <mat-form-field appearance="outline" class="input-container">
             <mat-label>Senha</mat-label>
-            <input matInput placeholder="Sua senha..." [type]="hide ? 'password' : 'text'" style="height: 50px;">
+            <input matInput placeholder="Sua senha..." [type]="hide ? 'password' : 'text'">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
