--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,11 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
+
 html, body { height: 100%; width: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #161616; color: white; }
-::ng-deep h1 {
-    margin: 0;
-    font-family: "Tilt Neon", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
+h1 {
+    margin: 0 !important;
+    font-family: "Tilt Neon", sans-serif !important;
+    font-optical-sizing: auto !important;
+    font-weight: 400 !important;
+    font-style: normal !important;
 }
 
